# froogle

./: .gitignore  Cargo.toml  README.md
src/: main.rs  util.rs
src/assets/: index.html  index.js  index.min.js  styles.css  styles.min.css
src/cli/: dirs.rs  mod.rs  worker.rs
src/model/: cache.rs  lexer.rs  mod.rs
src/parser/: html.rs  mod.rs  pdf.rs  xml.rs
src/server/: mod.rs  routes.rs
src/snowball/: mod.rs  snowball_env.rs
src/snowball/algorithms/: english_stemmer.rs
