[package]
name = "froogle"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
html5gum = "0.5.7"
log = "0.4.21"
lopdf = "0.32.0"
opener = "0.7.1"
path-dedot = { version = "3.1.1", features = ["lazy_static_cache"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
simple_logger = { version = "5.0.0", default-features = false }
tiny_http = "0.12.0"
xml-rs = "0.8.20"


[profile.release]
lto = true

