[package]
name = "froogle"
version = "0.4.3"
edition = "2021"
repository = "https://github.com/tripabhi/froogle"
description = "A local Search Engine"
license = "MIT"
keywords = ["search", "engine", "information", "retrieval"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
html5gum = "0.5.7"
log = "0.4.21"
lopdf = "0.32.0"
opener = "0.7.1"
path-dedot = { version = "3.1.1", features = ["lazy_static_cache"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
simple_logger = { version = "5.0.0", default-features = false }
tiny_http = "0.12.0"
xml-rs = "0.8.20"


[profile.release]
lto = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

